--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
 body {
-    background-color: beige;
-    text-align: center;
+  background-color: beige;
+  text-align: center;
+}
+
+a {
+  color: yellowgreen;
+}
+
+a:hover {
+  color: aquamarine;
 }
